# programming_quiz

./: .env.example  PythonQuiz.py  README.md  TelaLogin.py  alembic.ini  config_database.py  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 19ca87482302_create_user_table.py  df790dbf1c01_create_level_table.py
src/: main.py
src/database/: __init__.py  connect.py  database.py
src/database/modules/level/: __init__.py
src/database/modules/level/dtos/: create_level_dto.py  update_level_dto.py
src/database/modules/level/entities/: level_entity.py
src/database/modules/level/repositories/: level_repository.py
src/database/modules/phase/entities/: phase_entity.py
src/database/modules/phase/repositories/: phase_repository.py
src/database/modules/user/: __init__.py
src/database/modules/user/dto/: user_dto.py
src/database/modules/user/dtos/: __init__.py  create_user_dto.py  update_user_dto.py
src/database/modules/user/entities/: __init__.py  (+1 more)
src/modules/screens/game/: colors.py  constants.py  game_screen.py  images.py
src/modules/screens/user_screen/: user_screen.py
src/modules/user/entities/: user_entity.py
src/modules/user/model/: user.model.py
src/modules/user/repository/: user.repository.py  user_repository.py
src/shared/constants/: colors.py
src/shared/database_types/: uuid.py
src/shared/entities/: base_entity.py
src/shared/enums/: field_enum.py  game_state_enum.py
src/shared/functions/: get_class_atributes.py
src/shared/logger/: logger.py
src/shared/repositories/: default_repository.py
tests/: test_example.py
(+1 files in other folders)
